# Carthage

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  rag_chat.html  run_migrations.py  test_ai_endpoints.py  test_endpoints.py  test_full_pipeline.py  test_ingest.txt  test_orchestrator.py  test_redis.py  test_supabase.py  test_upload.html  upload_test.html
backend/agents/: __init__.py  analyst.py  anomaly_reasoner.py  base.py  orchestrator.py  pulse_writer.py  report_writer.py  risk_forecaster.py
backend/api/: __init__.py  ingest.py  router.py
backend/core/: __init__.py  config.py  database.py  events.py  llm.py  security.py
backend/migrations/: 000_full_schema.sql  000b_seed_data.sql  000c_views_and_functions.sql  001_add_upload_and_catalog.sql
backend/models/: __init__.py  alert.py  audit_log.py  data_catalog.py  department.py  domain.py  equipment.py  event_queue.py  fact_kpi.py  institution.py  inventory_item.py  metric.py  nl_query_log.py  partnership.py  program.py  report.py  report_template.py  research_project.py  space.py  staff.py  student.py  student_activity.py  time_dim.py  training_program.py  upload_log.py  user.py
backend/schemas/: __init__.py  alert.py  data_quality.py  department.py  equipment.py  forecast.py  institution.py  inventory.py  kpi.py  metric.py  partnership.py  program.py  query.py  report.py  research.py  space.py  staff.py  student.py  training.py  upload.py  user.py  websocket.py
backend/services/: __init__.py  alert_engine.py  data_quality.py  document_ingestion.py  ingestion.py  kpi_engine.py  (+5 more)
(+150 files in other folders)
