[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "supabase>=2.29.0",
    "uvicorn>=0.46.0",
]
